--- a/Design_Portfolio/dynamic.html
+++ b/Design_Portfolio/dynamic.html
@@ -179,6 +179,10 @@ Design and implement a personal design portfolio website that showcases your cre
 	</div>
 </div>
 
+<div class="strip">
+		
+		<a href="https://uscwebdev.github.io/itp104-submissions-CJDoolan/final_project/home.html#work" target="_blank"> Website Version One </a>
+	</div> 
 <hr>
 
 
@@ -197,7 +201,7 @@ Design and implement a personal design portfolio website that showcases your cre
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="execed.html">
+					<form action="productsc.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
