--- a/Design_Portfolio/execed.html
+++ b/Design_Portfolio/execed.html
@@ -202,12 +202,12 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 	<div class="button-group">
 				<div class="sc-button">
-					<form action="dynamic.html">
+					<form action="productsc.html">
 						<button class="scbutton" type="submit"> ← Prev Project</button> 
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="productsc.html">
+					<form action="adobe.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
