--- a/Design_Portfolio/productsc.html
+++ b/Design_Portfolio/productsc.html
@@ -27,8 +27,12 @@ Product SC
 
 #first-draft {
 	width: 75%;
-}
 
+}
+#change {
+	text-align: center;
+	margin-top: -40px;
+}
 </style>
 </head>
 <body>
@@ -96,12 +100,12 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
 		<p class="item"> Lo-Fi</p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p class="item"> Whole Club Feedback </p>
+		<p class="item"> Whole Club/ Client Feedback </p>
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
 		<p class="item">Mid-Fi</p>
 
 			<img class="arrow" src="dynamic/arrow.png" alt="-->">
-		<p class="item"> Whole Club Feedback</p>
+		<p class="item"> Whole Club/ Client Feedback</p>
 
 		<img class="arrow" src="dynamic/arrow.png" alt="-->">
 		<p class="item"> High-Fi</p>
@@ -133,7 +137,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 <div class="strip">
 		<h2> Refined Drafts </h2>
 	</div> 
-
+<p id="change"> Lo-fi underwent significant changes after Client Feedback </p>
 
 	<div class="trio">
 		<img class="img-trio" src="productsc/inspo-04.png" alt="draft-1">
@@ -194,7 +198,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 	 		
 		</div> <!-- left text -->
 		<div class="description">
-				<p > My team created visually appealing templates incorporating the company's new brand colors, typography, and imagery. These templates help to create a cohesive and recognizable visual identity.  </p>
+				<p > My team created visually appealing templates incorporating the company's new brand colors, typography, and imagery. These templates help to create a cohesive and recognizable visual identity. My task specifically focused on designing the flyer templates as seen below.  </p>
 		</div> <!-- descriptioin -->
 	</div><!--  organic post		 -->
 
@@ -340,12 +344,12 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 
 <div class="button-group">
 				<div class="sc-button">
-					<form action="execed.html">
+					<form action="dynamic.html">
 						<button class="scbutton" type="submit"> ← Prev Project</button> 
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="adobe.html">
+					<form action="execed.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
@@ -355,7 +359,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 
 
 
-<hr>
+
 
 
  	 <div class= "footer-navbar">
