--- a/Design_Portfolio/gallery.html
+++ b/Design_Portfolio/gallery.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 	<title>
-Galllery
+Gallery
 	</title>
 
 	 <meta name="description" content="Christina Doolan's design portfolio and Resume. Works include projects from executive eduction internship, innovation design club, Adobe, and more.">
@@ -122,6 +122,15 @@ Galllery
 		width:90%;
 
 	}
+
+
+	#psych {
+	display: flex;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom:50px;
+	margin-top: 25px;
+}
 </style>
 
 
@@ -159,6 +168,33 @@ Galllery
 
  	</div><!--  first section -->
 
+
+
+
+
+<div class="container reveal active">
+
+<div class="organic">
+ 		<div class="left-1">
+ 			<div class="title">
+	 			<img class="leaf" src="img/leaf-03.png" alt="-">
+	 			 <h2> Website: Psychology of Design</h2>  
+	 		</div><!--  section title -->
+	 		
+		</div> <!-- left text -->
+		<div class="description">
+				<p> The goal of this website was to show users how they might construct their own site in a way that was both visually appealing and understandable. The 5 main topics I focused on were Shape, Color, Mental Models, Gestalt Principles, and Dual Processing. I wanted to combine psychology principles and design principles into an interactive and educational page. </p>
+		</div> <!-- descriptioin -->
+	</div><!--  organic post		 -->
+
+			<form action="https://cdoolan0.wixsite.com/psychology-of-design" target="_blank">
+						<button class="scbutton" id="psych" type="submit"> View website in new browser </button> 
+					</form>
+	<div class="section">
+		<iframe src="https://cdoolan0.wixsite.com/psychology-of-design" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+
+</div>
+</div>
 
 
 
