--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ Christina Doolan | Student Page
 			<li><a href= "https://stackblitz.com/edit/react-dstxgp?file=src%2Findex.js"> Lab 6: Static Page with Components</a> </li>
 			<li><a href= "https://stackblitz.com/edit/react-amwssn?file=public%2Findex.html "> Lab 7: React Photo Gallery</a> </li>  
 			<li><a href= "https://stackblitz.com/edit/react-ufjesk?file=public%2Findex.html"> Lab 8: Shopping Cart With Subtotal</a> </li> 
+			<li><a href= "https://stackblitz.com/edit/react-6mkqyc?file=public%2Findex.html"> Lab 9: Form Validation</a> </li> 
 
 			</ol> 
 		</div> <!-- labs -->
