--- a/assignment_08/project_proposal.html
+++ b/assignment_08/project_proposal.html
@@ -32,18 +32,18 @@ Project Proposal
 <body>
 
 	<div id="proposal">
-		<h1> Final Project Proposal: React Design Portfollio </h1>
+		<h1> Final Project Proposal: React App Design </h1>
 		<h2> Topic </h2>
-		<p> For my final project, I will be coding a portfolio website that will provide a comprehensive and intuitive platform for showcasing my significant achievements and projects from my college experience. This site will serve as a digital testament to my academic journey and the development of my professional skills. </p>
+		<p> For my final project, I will be coding a food festiva app that will provide a comprehensive and intuitive platform for showcasing a planned event. This site will serve as a mobile element for an entire festival. </p>
 		<h2> Intended Audience </h2>
-			<p>The website will cater to professionals working in web development, front-end and back-end development, and user interface (UI) and user experience (UX) design. It will be used as a component of resume used when applyiing for internships and future jobs. 
+			<p>The website will cater to a large audience of food lovers. It aims to attract people of all ages to come to the event! 
 			</p>
 		<h2> Design & Style </h2>
-			<p>The website's style will be characterized by a simplistic and feminine design, enriched with interactive and playful elements.</p>
+			<p>The website's style will be characterized by a simplistic vector design, enriched with interactive and playful elements.</p>
 		<h3> Color Scheme </h3>
-		<img src="img/Color.png" alt="Color Palette">
-		<p> The style will match the style of my personal branding seen below </p>
-		<img src= "img/style.png" alt="colorscheme"> 
+		<img src="img/colors.png" alt="Color Palette">
+		<p> The style will match the style of the graphics seen below </p>
+		<img src= "img/icons.png" alt="colorscheme"> 
 		<h2> Inspiration Websites </h2>
 		<ul>
 			<li>
@@ -60,15 +60,15 @@ Project Proposal
 		<h2> Scope </h2>
 		<ul>
 			<li> Home </li>
-			<li> Work 
-					<ul> <li> Pop-Up </li>
-					<li> Product SC </li>
-					<li> Playing Card </li>
-					<li> Portfolio Website</li>
-					<li> Movie Redesign</li>
-					<li> Psychology of Design</li>
+			<li> Menu 
+					<ul> <li> All American </li>
+					<li> Asian </li>
+					<li> Mediterranian </li>
+					<li> Beverages</li>
+					<li> European</li>
+					<li> Dessert</li>
 				 </ul> </li>
-			<li> About me (resume) </li>
+			<li> Latin American </li>
 		</ul>
 		<h2> Extras </h2>
 
@@ -84,18 +84,9 @@ Project Proposal
 
 		<h2> Wireframe </h2>
 
-		<ul>
-			<li><a target="my-frame" href="img/1_home.pdf"> Home page</a></li>
-			<li><a target="my-frame" href="img/2_Design.pdf"> Design Portfolio</a></li>
-			<li><a target="my-frame" href="img/3_POPUP.pdf"> Pop Up Banner Page</a></li>
-			<li><a target="my-frame" href="img/4_PRODUCT_SC.pdf"> Product SC page</a></li>
-			<li><a target="my-frame" href="img/5_CARDS.pdf"> Playing Cards page</a></li>
-			<li><a target="my-frame" href="img/6_Movie.pdf"> Movie Poster Redesign page</a></li>
-			<li><a target="my-frame" href="img/8_Gallery.pdf"> Gallery page</a></li>
-			<li><a target="my-frame" href="img/9_resume.pdf"> Resume page</a></li>
-		</ul>
+		<img src= "img/wireframe1.png" alt="colorscheme"> 
 
-		<iframe name="my-frame" src="img/1_home.pdf"> </iframe>
+		
 	
 
 	</div>
