--- a/assignment_08/project_proposal.html
+++ b/assignment_08/project_proposal.html
@@ -41,7 +41,7 @@ Project Proposal
 		<h2> Design & Style </h2>
 			<p>The website's style will be characterized by a simplistic vector design, enriched with interactive and playful elements.</p>
 		<h3> Color Scheme </h3>
-		<img src="img/colors.png" alt="Color Palette">
+		<img src="img/Colors.png" alt="Color Palette">
 		<p> The style will match the style of the graphics seen below </p>
 		<img src= "img/icons.png" alt="colorscheme"> 
 		<h2> Inspiration Websites </h2>
