--- a/Design_Portfolio/adobe.html
+++ b/Design_Portfolio/adobe.html
@@ -236,12 +236,12 @@ Create a visually appealing and informative pop-up banner design for Marshall Ex
 
 	<div class="button-group">
 				<div class="sc-button">
-					<form action="productsc.html">
+					<form action="execed.html">
 						<button class="scbutton" type="submit"> ← Prev Project</button> 
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="movie.html">
+					<form action="dynamic.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
