--- a/Design_Portfolio/dynamic.html
+++ b/Design_Portfolio/dynamic.html
@@ -42,17 +42,9 @@ Portfolio
 }
 
 
-.wire {
-	width: 80%;
-
-	margin:auto;
-}
-.section-wireframe {
-	
-	display:flex;
-	justify-content: center ;
 
 }
+
 
 </style>
 </head>
@@ -157,7 +149,6 @@ Design and implement a personal design portfolio website that showcases your cre
 		
 </div>
 
-
 <div class="container reveal active">
 
 <div class="strip">
@@ -196,12 +187,12 @@ Design and implement a personal design portfolio website that showcases your cre
 
 		<div class="button-group">
 				<div class="sc-button">
-					<form action="movie.html">
+					<form action="adobe.html">
 						<button class="scbutton" type="submit"> ← Prev Project</button> 
 					</form>
 				</div>
 				<div class="sc-button">
-					<form action="productsc.html">
+					<form action="festival.html">
 							<button class="scbutton" type="submit"> Next Project → </button> 
 					</form>
 				</div>
