--- a/Design_Portfolio/home.html
+++ b/Design_Portfolio/home.html
@@ -195,6 +195,36 @@ Portfolio_CDoolan_Home
 
 
 
+<div class="container reveal active">
+
+
+	<div class="dynamic">
+ 		<div class="left">
+ 			<div class="title">
+	 			<img class="leaf" src="img/leaf-03.png" alt= "-">
+	 			  <h2>Food Festival Promotion </h2>   
+	 		</div><!--  section title -->
+	 		<p class="role"> Group Project- reviewed in Design 3 and Front-end Web Development class </p>
+	 		
+			
+			<form action= "festival.html">
+				<button class="sc-button" type="submit"> View Project</button> 
+			</form>
+		</div> <!-- left side text -->
+		<div class="formattwo">
+				<img class="test" src= "festival/main_img1.png" alt="Homepage Image">
+		</div><!-- dynamic designs image -->
+	</div> <!-- dynamc designs section -->
+
+</div>
+
+</div>
+
+
+<hr>
+
+
+
 
 
 
@@ -279,37 +309,37 @@ Portfolio_CDoolan_Home
 
 
 
- 		<hr>
+ 	
 
 
 
 
 
 
-<div class="container reveal active">
+<!-- <div class="container reveal active">
 
 	<div class="dynamic">
  		<div class="left">
  			<div class="title">
 	 			<img class="leaf" src="img/leaf-03.png" alt= "-">
 	 			  <h2>Movie Poster Redesign</h2>   
-	 		</div><!--  section title -->
-	 		<p class="role"> Class project: DES 202</p>
+	 		</div> section title -->
+	 	<!-- 	<p class="role"> Class project: DES 202</p>
 	 		
 			<form action= "movie.html">
 				<button class="sc-button" type="submit"> View Project</button> 
 			</form>
-		</div> <!-- left side text -->
+		</div> left side text
 		<div class="formattwo">
 				<img class="test" src= "adobe/home2.png" alt="Homepage Image">
-		</div><!-- dynamic designs image -->
-	</div> <!-- dynamc designs section -->
+		</div>dynamic designs image -->
+	<!-- </div> dynamc designs section
 
 </div>
+ -->
 
 
-
- 		<hr>
+ 	<!-- 	<hr> -->
 
 
 
