--- a/Design_Portfolio/productsc.html
+++ b/Design_Portfolio/productsc.html
@@ -10,12 +10,7 @@ Product SC
 <style>
 
 
-.img-quad {
-	
-	height: 200px;
-		margin-left:10px;
-		margin-right: 10px;
-}
+
 .organic {
 	margin-bottom: 50px;
 }
@@ -344,7 +339,7 @@ Revamp and rebrand the "Product SC" club with a team of four designers, aiming t
 
 <div class="button-group">
 				<div class="sc-button">
-					<form action="dynamic.html">
+					<form action="festival.html">
 						<button class="scbutton" type="submit"> ← Prev Project</button> 
 					</form>
 				</div>
