--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ Christina Doolan | Student Page
 			<li><a href="https://stackblitz.com/edit/react-95k4a5?file=public%2Findex.html"> Assign 7:Shopping cart Item Count</a> </li>
 			<li><a href="assignment_08/project_proposal.html"> Assign 8:Project Proposal</a> </li>
 			<li><a href="https://stackblitz.com/edit/react-router-dom-basix-multi-page-example-hydpgc?file=public%2Findex.html"> Assign 9:Final HTML</a> </li>
+			<li><a href="https://stackblitz.com/edit/react-router-dom-basix-multi-page-example-hydpgc?file=public%2Findex.html"> Final Project: Food Festival App</a> </li>
+			<li><a href="final/final_summary.html"> Final Project: Project Summary</a> </li>
 			</ol>
 
 
